--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<html>
+  <body></body>
 <script>
-document.body.innerHTML += window.location.href;
+  
+  document.addEventListener("DOMContentLoaded", function(event) { 
+    document.body.innerHTML += window.location.href;
+});
 </script>
+</html>
